@@ -156,5 +156,7 @@ let print_specific_operation printreg op ppf arg =
 
 let stack_alignment =
   match Config.system with
-  | "macosx" -> 16
-  | _ -> 4
+  | "win32" -> 4     (* MSVC *)
+  | _ -> 16
+(* PR#6038: GCC and Clang seem to require 16-byte alignment nowadays,
+   even if only MacOS X's ABI formally requires it *)
