@@ -115,13 +115,10 @@
 #define PROFILE_C
 #endif
 
-#ifdef SYS_macosx
+/* PR#6038: GCC and Clang seem to require 16-byte alignment nowadays,
+   even if only MacOS X's ABI formally requires it. */	
 #define ALIGN_STACK(amount) subl $ amount, %esp ; CFI_ADJUST(amount)
 #define UNDO_ALIGN_STACK(amount) addl $ amount, %esp ; CFI_ADJUST(-amount)
-#else
-#define ALIGN_STACK(amount)
-#define UNDO_ALIGN_STACK(amount)
-#endif
 
 /* Allocation */
 
@@ -304,11 +301,7 @@ LBL(106):
 LBL(107):
     /* Pop the exception handler */
         popl    G(caml_exception_pointer); CFI_ADJUST(-4)
-#ifdef SYS_macosx
         addl    $12, %esp       ; CFI_ADJUST(-12)
-#else
-        addl    $4, %esp        ; CFI_ADJUST(-4)
-#endif
 LBL(109):
     /* Pop the callback link, restoring the global variables */
         popl    G(caml_bottom_of_stack); CFI_ADJUST(-4)
@@ -461,10 +454,8 @@ FUNCTION(caml_ml_array_bound_error)
         movl    %edx, G(caml_last_return_address)
         leal    4(%esp), %edx
         movl    %edx, G(caml_bottom_of_stack)
-    /* For MacOS X: re-align the stack */
-#ifdef SYS_macosx
+    /* Re-align the stack */
         andl    $-16, %esp
-#endif
     /* Branch to [caml_array_bound_error] (never returns) */
         call    G(caml_array_bound_error)
         CFI_ENDPROC
