@@ -25,7 +25,7 @@
 
 #ifdef TARGET_i386
 #define Saved_return_address(sp) *((intnat *)((sp) - 4))
-#ifdef SYS_macosx
+#ifndef SYS_win32
 #define Callback_link(sp) ((struct caml_context *)((sp) + 16))
 #else
 #define Callback_link(sp) ((struct caml_context *)((sp) + 8))
