@@ -168,6 +168,9 @@ Bug fixes:
   (Damien Doligez)
 - PR#5820: Fix camlp4 lexer roll back problem
   (Hongbo Zhang)
+- PR#6038: on x86-32, enforce 16-byte stack alignment for compatibility
+  with recent GCC and Clang.  Win32/MSVC keeps 4-byte stack alignment.
+  (Xavier Leroy)
 - PR#6062: Fix a regression bug caused by commit 13047
   (Hongbo Zhang, report by Christophe Troestler)
 - PR#6109: Typos in ocamlbuild error messages
